# Timeline_app

./: .gitignore  index2.html.bak  locate_git.txt  package-lock.json  package.json
src/: index [wintertime].html  index.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
